increase welcome section height to correct visual bug on ios mobile safari

--- a/public_html/styles/style-mobile.css
+++ b/public_html/styles/style-mobile.css
@@ -24,7 +24,7 @@ html {
 
 	.welcome-section {
 		grid-column: 2/3;
-		height: 45vh;
+		height: 100vh;
 		justify-self: center;
 		align-self: center;
 		color: #e3e3e3;
